--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -66,7 +66,7 @@
    
   {% endif %} 
   
-
+  {{ 'bootstrap.css' | asset_url | stylesheet_tag }}
 
   <!-- DO NOT MOVE THIS CODE PLEASE -->
   		{{ 'qbreaks.css' | asset_url | stylesheet_tag }} 
