--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -27,7 +27,7 @@
         </div>
         <div class="row bmg_h_main">
             <div class="col-md-8 bmgh_m_logo_search">
-                <a href="/">
+                <a href="/"> 
                     <img src="">
                 </a>
                 <div class="bmgh_search_form">
@@ -35,7 +35,28 @@
                 </div>
             </div>
             <div class="col-md-4">
-
+                <div class="bmgh_m_icons">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="">
+                                Reorder
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="">
+                                Order by Item No.
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="">
+                                Cart
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="row bmg_h_nav">
@@ -45,3 +66,10 @@
         </div>
     </div>
 </div>
+
+{% schema %}
+  {
+    "name": "BGM Header",
+    "settings": []
+  }
+{% endschema %}
