--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,7 +80,7 @@
 
 	<body>
 
-		{% section 'bgm_header' %}
+		{% section 'bmg_header' %}
 				
 		<div id="PageContainer" class="is-moved-by-drawer">
         		{% if template == 'index' %}
