bmg header update

--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -74,9 +74,9 @@
         {
             "type": "image_picker",
             "id": "logo",
-            "label": "Logo"
+            "label": "BMG Logo"
         }
-    ],
+    ], 
     "presets": [
       {
         "name": "BMG Header",
