--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -60,8 +60,10 @@
             </div>
         </div>
         <div class="row bmg_h_nav">
-            <div class="col-md-12">
-
+            <div class="col-md-12 bmgh_nav">
+                {% for link in linklists.header_menu.links %}
+                    <a href="{{ link.url }}">{{ link.title }}</a>
+                {% endfor %}
             </div>
         </div>
     </div>
@@ -75,6 +77,11 @@
             "type": "image_picker",
             "id": "logo",
             "label": "BMG Logo"
+        },
+        {
+            "type": "link_list",
+            "id": "header_menu",
+            "label": "Header Menu"
         }
     ], 
     "presets": [
