--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -62,7 +62,7 @@
         <div class="row bmg_h_nav">
             <div class="col-md-12 bmgh_nav">
                 {% assign MainLinks = section.settings.header_menu %}
-                {% for link in linklists.MainLinks.links %}
+                {% for link in linklists[section.settings.header_menu].links %}
                     <a href="{{ link.url }}">{{ link.title }}</a>
                 {% endfor %}
             </div>
