--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -1,28 +1,25 @@
 <div class="bmg_header">
     <div class="container">
         <div class="row bmg_h_top">
-            <div class="col-md-6">
-                <a href="#">
-                    Why Choose BMG
-                </a>
-                <a href="tel:1-800-964-2029" class="bgm_h_icon">
-                    <img src="">
-                    1-800-964-2029
-                </a>
+            <div class="col-md-6 bmgh_top_col">
+                {% for block in section.blocks %}
+                    {% if block.type == 'tnl_links' %}
+                        <a href="{{ section.settings.topnavright_link_url }}" {% if section.settings.topnavleft_link_icon %}class="bgm_h_icon"{% endif %}>
+                            {% if section.settings.topnavleft_link_icon %}<img src="{{ section.settings.topnavleft_link_icon | img_url: 'master'}}">{% endif %}
+                            {{ section.settings.topnavleft_link_text }}
+                        </a>
+                    {% endif %}
+                {% endfor %}
             </div>
-            <div class="col-md-6">
-                <a href="#">
-                    Digital Catalogue
-                </a>
-                <a href="#">
-                    Order Status
-                </a>
-                <a href="#">
-                    My Account
-                </a>
-                <a href="#">
-                    Sign In
-                </a>
+            <div class="col-md-6 bmgh_top_col">
+                {% for block in section.blocks %}
+                    {% if block.type == 'tnl_links' %}
+                        <a href="{{ section.settings.topnavleft_link_url }}" {% if section.settings.topnavright_link_icon %}class="bgm_h_icon"{% endif %}>
+                            {% if section.settings.topnavright_link_icon %}<img src="{{ section.settings.topnavright_link_icon | img_url: 'master'}}">{% endif %}
+                            {{ section.settings.topnavright_link_text }}
+                        </a>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
         <div class="row bmg_h_main">
@@ -61,7 +58,6 @@
         </div>
         <div class="row bmg_h_nav">
             <div class="col-md-12 bmgh_nav">
-                {% assign MainLinks = section.settings.header_menu %}
                 {% for link in linklists[section.settings.header_menu].links %}
                     <a href="{{ link.url }}">{{ link.title }}</a>
                 {% endfor %}
@@ -83,8 +79,68 @@
             "type": "link_list",
             "id": "header_menu",
             "label": "Header Menu"
-        }
+        },
     ], 
+    "blocks": [
+        {
+            "name": "Top Nav Left Links",
+            "type": "tnl_links",
+            "settings": [
+                {
+                    "type": "image_picker",
+                    "id": "topnavleft_link_icon",
+                    "label": "Top Nav Left Link Icon"
+                },
+                {
+                    "type": "text",
+                    "id": "topnavleft_link_text",
+                    "label": "Top Nav Left Link Text"
+                },
+                {
+                    "type": "text",
+                    "id": "topnavleft_link_url",
+                    "label": "Top Nav Left Link URL"
+                }                  
+            ]
+        },
+        {
+            "name": "Top Nav Right Links",
+            "type": "tnr_links",
+            "settings": [
+                {
+                    "type": "image_picker",
+                    "id": "topnavright_link_icon",
+                    "label": "Top Nav Right Link Icon"
+                },
+                {
+                    "type": "text",
+                    "id": "topnavright_link_text",
+                    "label": "Top Nav Right Link Text"
+                },
+                {
+                    "type": "text",
+                    "id": "topnavright_link_url",
+                    "label": "Top Nav Right Link URL"
+                }                   
+            ]
+        },
+        {
+            "name": "Header Icons",
+            "type": "icons",
+            "settings": [
+                {
+                    "type": "image_picker",
+                    "id": "header_icons",
+                    "label": "Header Icon"
+                },
+                {
+                    "type": "text",
+                    "id": "header_icon_text",
+                    "label": "Header Icon Text"
+                }                  
+            ]
+        },
+    ],
     "presets": [
       {
         "name": "BMG Header",
