--- a/sections/bmg_header.liquid
+++ b/sections/bmg_header.liquid
@@ -28,7 +28,12 @@
                     <img src="{{ section.settings.logo | img_url: 'master' }}">
                 </a>
                 <div class="bmgh_search_form">
-                    {% include 'search-bar'  %}
+                    <form action="/search" method="get" class="searchbar" role="search">
+                        <i class="icon searchbaricon" aria-hidden="true"></i>
+                        <input type="search" name="q" value="{{ search.terms | escape }}" placeholder="Enter the product name, item # " class="searchinput" />
+                        <input type="hidden" name="type" value="product" />    
+                        
+                      </form>
                 </div>
             </div>
             <div class="col-md-4">
