--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -99,7 +99,8 @@
         			</div>
         		</main>
 
-        		{% section 'footer' %}
+    {% section 'bmg_footer' %}
+
 		</div>
 
 		<a href="#" class="scrollup" style="display: inline;"><i class="fa fa-angle-up" aria-hidden="true"></i> TOP</a>
