--- a/sections/bmg_customized.liquid
+++ b/sections/bmg_customized.liquid
@@ -1,4 +1,4 @@
-<div class="bmg_categories">
+<div class="bmg_customized">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -9,7 +9,7 @@
         <div class="row">
             {% for block in section.blocks %}
                 <div class="col-md-3">
-                    <div class="bmgc_body">
+                    <div class="bmgcust_body">
                         {% if collections[block.settings.featured_collection].featured_image == blank %} 
                             <img src="{{ block.settings.collection_image | img_url: 'master' }}"> 
                         {% else %}
@@ -30,12 +30,12 @@
         {
             "type": "text",
             "id": "bmg_customized_heading",
-            "label": "BMG Categories Heading"
+            "label": "BMG Customized Heading"
         },
         {
             "type": "text",
             "id": "bmg_customized_text",
-            "label": "BMG Categories Paragraph"
+            "label": "BMG Customized Paragraph"
         }
     ], 
     "blocks": [
