customized & brands updated

--- a/sections/bmg_brands.liquid
+++ b/sections/bmg_brands.liquid
@@ -12,7 +12,7 @@
                     <div class="bmgb_body">
                             <img src="{{ block.settings.brand_logo | img_url: 'master' }}"> 
                         {% endif %}
-                        <h3>{{ collections[block.settings.featured_collection].title }}</h3>
+                        <h3>{{ block.settings.brand_text }}</h3>
                     </div>
                 </div>
             {% endfor %}
