--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -67,6 +67,7 @@
   {% endif %} 
   
   {{ 'bootstrap.css' | asset_url | stylesheet_tag }}
+  {{ 'bmg_styles.css' | asset_url | stylesheet_tag }}
 
   <!-- DO NOT MOVE THIS CODE PLEASE -->
   		{{ 'qbreaks.css' | asset_url | stylesheet_tag }} 
