--- a/sections/bmg_customized.liquid
+++ b/sections/bmg_customized.liquid
@@ -1,22 +1,24 @@
 <div class="bmg_customized">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>{{ section.settings.bmg_customized_heading }}</h2>
-                <p>{{ section.settings.bmg_customized_text }}</p>
-            </div>
-        </div>
-        <div class="row">
-            {% for block in section.blocks %}
-                <div class="col-md-3">
-                    <div class="bmgcust_body">
-                        <a href="{{ block.settings.customized_url }}">
-                            <h3>{{ block.settings.customized_text }}</h3>
-                            <img src="{{ block.settings.customized_image | img_url: 'master' }}"> 
-                        </a>
-                    </div>
+        <div class="bmgc_outerbody">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>{{ section.settings.bmg_customized_heading }}</h2>
+                    <p>{{ section.settings.bmg_customized_text }}</p>
                 </div>
-            {% endfor %}
+            </div>
+            <div class="row">
+                {% for block in section.blocks %}
+                    <div class="col-md-3">
+                        <div class="bmgcust_body">
+                            <a href="{{ block.settings.customized_url }}">
+                                <h3>{{ block.settings.customized_text }}</h3>
+                                <img src="{{ block.settings.customized_image | img_url: 'master' }}"> 
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
