--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -142,6 +142,7 @@ HOMEPAGE STYLING
     font-family: 'AvenirNext-Regular';
     color: #333333;
     font-weight: 100;
+    margin: 0 0 0.5vw;
 }
 
 .bmg_customized p {
