--- a/sections/bmg_customized.liquid
+++ b/sections/bmg_customized.liquid
@@ -7,7 +7,7 @@
                     <p>{{ section.settings.bmg_customized_text }}</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row bmgc_customblocks">
                 {% for block in section.blocks %}
                     <div class="col-md-3">
                         <div class="bmgcust_body">
