--- a/assets/bmg_styles.css
+++ b/assets/bmg_styles.css
@@ -235,6 +235,14 @@ HOMEPAGE STYLING
     width: 100%;
 }
 
+.bmg_two_cols .row > div:first-child {
+    padding-right: 10px;
+}
+
+.bmg_two_cols .row > div:last-child {
+    padding-left: 10px;
+}
+
 .bmg_two_cols .bmg_tc_col1, .bmg_two_cols .bmg_tc_col2 {
     min-height: 19.792vw;
     display: flex;
@@ -244,6 +252,8 @@ HOMEPAGE STYLING
     flex-direction: column;
     justify-content: center;
     padding: 1.5vw;
+    background-size: cover;
+    border-radius: 8px;
 }
 
 .bmg_two_cols .bmg_tc_col1 > *, .bmg_two_cols .bmg_tc_col2 > * {width: 100%;display: block;}
@@ -264,6 +274,19 @@ HOMEPAGE STYLING
 .bmg_two_cols .bmg_tc_col2 p {
     max-width: 11.719vw;
     margin: 2vw 0;
+}
+
+.bmg_two_cols .bmg_button {
+    max-width: 5.729vw;
+    width: 100%;
+    min-height: 2.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4c5dc9;
+    font-size: .729vw;
+    color: #fff;
+    border-radius: 4px;
 }
 
 /********************************************************
